--- a/templates/base.html
+++ b/templates/base.html
@@ -35,16 +35,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand" href="#">Flask on Heroku</a>
-            <div class="nav-collapse">
+            <a class="brand" href="/">Flask on Heroku</a>
+            <div class="nav">
                 <ul class="nav">
                 </ul>
                 {% block navbar_right %}
-                <ul class="nav pull-right">
-                    {% if not session.logged_in %}
-                    <li><a href="#">Login or Signup</a></li>
+                <ul class="nav">
+                    {% if current_user.is_authenticated() %}
+                    <li><a href="/logout">Logout</a></li>
                     {% else %}
-                    <li><a href="#">Logout</a></li>
+                    <li><a href="/login">Login</a></li>
+                    <li><a href="/register">Register</a></li>
                     {% endif %}
                 </ul>
                 {% endblock %}
@@ -64,7 +65,7 @@
 
     {% block footer %}
     <footer class="footer">
-        <p>&copy; Copyright</p>
+        <p>&copy; Footer</p>
     </footer>
     {% endblock %}
 
