--- a/templates/login.html
+++ b/templates/login.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
-        <h1>Sign In</h1>
-        <form action="" method="post" name="login">
-            {{ form.hidden_tag() }}
-            <p>
-                Name:<br>
-                {{ form.name(size=80) }}<br>
-            </p>
-            <p>
-                Email:<br>
-                {{ form.email(size=80) }}<br>
-            </p>
-            <p><input type="submit" value="Sign In"</p>
-        </form>
+<h1>Sign In</h1>
+<form action="" method="post" name="login">
+    {{ form.hidden_tag() }}
+    <p>
+        Email:<br>
+        {{ form.email(size=80) }}<br>
+    </p>
+    <p>
+        Password:<br>
+        {{ form.password(size=80) }}<br>
+    </p>
+    <p><input type="submit" value="Sign In" class="btn"></p>
+</form>
 {% endblock %}
