--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
                     <li><a href="/logout">Logout</a></li>
                     {% else %}
                     <li><a href="/login">Login</a></li>
-                    <li><a href="/register">Register</a></li>
+                    <li><a href="/register">Sign Up</a></li>
                     {% endif %}
                 </ul>
                 {% endblock %}
@@ -57,6 +57,17 @@
 
 <div class="container page">
     <div class="content">
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
+
+
         {% block content %}
         {% endblock %}
     </div>
