--- a/templates/register.html
+++ b/templates/register.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Register New User</h1>
+<h1>Sign Up</h1>
 <form action="" method="post" name="register">
     {{ form.hidden_tag() }}
-    <p>
-        Name:<br>
-        {{ form.name(size=80) }}<br>
-    </p>
     <p>
         Email:<br>
         {{ form.email(size=80) }}<br>
     </p>
-    <p><input type="submit" value="Register"</p>
+    <p>
+        Password:<br>
+        {{ form.password(size=80) }}<br>
+    </p>
+    <p><input type="submit" value="Register" class="btn"></p>
 </form>
 {% endblock %}
