added error checking incase email already exist in database

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <h1>Hello World!</h1>
     <p>This is a Python Flask website running on Heroku and Postgresql.</p>
 {% if current_user.is_authenticated() %}
-    <p>You are currently logged in as <strong>{{ user.email }}</strong>.</p>
+    <br><p>You are currently logged in as <strong>{{ user.email }}</strong></p>
 {% else %}
     <br><p>You are not logged in.</p>
 {% endif %}
